# omni-llm-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  browser.py  config.py  docker-compose.yml  main.py  pyproject.toml
app/api/: dependencies.py  middleware.py  server.py
app/api/routers/: health.py  query.py
app/core/: config.py  logger.py
app/domain/: interfaces.py  schemas.py
app/infrastructure/browser/: manager.py
app/infrastructure/providers/: base_playwright.py  chatgpt.py  claude.py  factory.py  gemini.py
app/services/: query_service.py
providers/: __init__.py  _base_playwright.py  base.py  chatgpt.py  claude.py  factory.py  gemini.py
